# DietGeniusAI

./: .dockerignore  .env.example  .gitignore  DESIGN_SYSTEM.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.prod  MEDICAL_REPORTS_COMPLETION.md  Makefile  README.md  add_avatar_column.sql  add_medical_table.sql  add_profession_column.sql  alembic.ini  apidocs.md  check_db.py  create_db.py  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test.md  test_ai_assessment.py  test_allowed_origins.py  test_app_startup.py  test_daily_activity_summary.py  test_fixes.py  test_meal_types_api.py  test_medical_reports.py  test_qa_api.py  test_qa_session_summary.py  test_qa_summary_service.py  test_redis.py  test_redis_storage.py  test_settings.py  useronboarding.md
app/: main.py  main_clean.py
app/agents/: agetns.py  food_agent.py  meal_planning.py  memory_example.py  onboarding_agent.py  utility_agent.py
app/api/: api.py  deps.py
app/constants/: agent_const.py  bedrock.py  models.py  prompts.py  storage.py
app/core/: config.py  database_config.py  pagination.py  rate_limiter.py
app/cron/: google_health_sync.py
app/db/: base.py  create_tables.py  redis.py
app/docs/: ai_assessment_summary.md  daily_activity_api_examples.md  daily_activity_summary.md  food_nutrition_api.md  google_health_integration.md  google_health_nutrition_fix.md
app/models/: __init__.py  ai_assessment_summary.py  daily_activity_summary.py  food_nutrition.py  google_health.py  meal_plan.py  medical.py  qa_session_summary.py  user.py  water_intake.py
app/schemas/: MealPlanTemplate.py  NutritionistQA.py  __init__.py  medical.py  (+13 more)
examples/: redis_usage_example.py
utildata/: feature.md
(+137 files in other folders)
